--- a/src/Component/Projects.css
+++ b/src/Component/Projects.css
@@ -1,3 +1,25 @@
+:root {
+    --button-text-color-light: white;
+    --button-text-color-dark: white;
+  }
+  
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --button-text-color: var(--button-text-color-dark);
+    }
+  }
+  
+  @media (prefers-color-scheme: light) {
+    :root {
+      --button-text-color: var(--button-text-color-light);
+    }
+  }
+  
+.eachbtn1{
+    color: var(--button-text-color);
+  }
+ 
+
 .projects{
     width: 100%;
     display: flex;
